2006-02-14 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Small correction to TCA (old_cat_number)

2006-02-13 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Correction to class.tx_directmail_checkjumpurl.php and class.dmailer.php: missing global
	* Modifying grouping of module configuration options.
	* Fix RDCT usability issue by adding selection list of domains.
	* Add use_domain in sys_dmail table and module configuration options.
	* Fix bugtracker issue 253.
	* Make sure long_link_rdct_url is consistent with use_domain when the mail is compiled.
	* Correct small glitches.

2006-02-11 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Change version number to 2.0.0 so that we can refer to it easily in the manual.
	* Change state to Stable.
	* Add conflicts with sr_direct_mail_ext, it_dmail_fix
	* Modify function makeCategories.
	* Complete conversion function, including localization.

2006-02-10 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Correction to returnmail.phpsh
	* Restructure class.readmail.php

2006-02-09 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Correction to foreign_table_where clauses in categories mm tables
	* Add class class.tx_directmail_checkjumpurl.php in res directory to implement hook on tslib_fe/checkDataSubmisssion.
	* Configure hook on tslib_fe/checkDataSubmisssion in ext_localconf.php (requires modified tslib_fe and index_ts from TYPO3core CVS).
	* Fix bugtracker issue 670: add aC to the jumpUrl prefix and forward it to the jumped-to URL so that the account cannot be hijacked.
	* Set $TYPO3_CONF_VARS['EXTCONF']['direct_mail']['defaultRecipFields'] in ext_localconf.php.
	* Correction: set some defaults in the Module configuration form.
	* Localize labels in function cmd_displayUserInfo.
	* Restrict displayed categories to those specified by Page TSConfig in cmd_displayPageInfo and cmd_displayUserInfo
	
2006-02-09  Thorsten Kahler  <thorsten.kahler@dkd.de>