@@ -1,0 +1,19 @@
+/**
+ *
+ * @package TYPO3
+ * @subpackage tx_directmail
+ * @version setup.txt,v 1.1 2006/02/02 11:37:01 tkahler Exp
+ */
+
+ 	// Configuring the insertion of dmailer boundaries
+includeLibs.tx_directmail_container = EXT:direct_mail/res/scripts/class.tx_directmail_container.php
+
+	// In html content
+tt_content.stdWrap.postUserFunc = tx_directmail_container->insert_dMailer_boundaries
+tt_content.stdWrap.postUserFunc {
+	
+}
+
+	// In plaintext content
+lib.alt_plaintext.renderObj.userProc < tt_content.stdWrap.postUserFunc
+lib.alt_plaintext.renderObj.userProc.useParentCObj = 1
